tests/reference/run-array_constructor_with_asterisk_in_type_spec_cc-fc032e2.stderr
semantic error: Type-spec cannot contain an asterisk for a type parameter
 --> tests/errors/array_constructor_with_asterisk_in_type_spec_cc.f90:2:14
  |
2 |     print *, [character(*) :: "a", "b", "ball", "cat"]
  |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Type-spec cannot contain an asterisk for a type parameter
 --> tests/errors/array_constructor_with_asterisk_in_type_spec_cc.f90:3:14
  |
3 |     print *, [character(*) :: "a2", "b2", "ball2", "cat2"]
  |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
